styles/global.css
html{
  height: 100%;
  font-family: 'Roboto';
}

body {
  margin: 0;
  height: 100%;
}

#__next {
  height: 100%;
  overflow: hidden;
}

/* .scroller {
  height: 100%;
  overflow-y: overlay;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scroller::-webkit-scrollbar {
  display: none;
} */

::-webkit-scrollbar {
  width: 14px;
}

::-webkit-scrollbar-thumb {
  height: 6px;
  border: 4px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  background-color: rgba(121, 121, 121, 0.25);
  -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
}

::-webkit-scrollbar-button {
  width: 0;
  height: 0;
  display: none;
}

::-webkit-scrollbar-corner {
  background-color: transparent;
}

